Add pixel devices to control plane page

--- a/app/views/control/index.html.erb
+++ b/app/views/control/index.html.erb
@@ -1,3 +1,5 @@
-<h1>Hello World</h1>
+<h1>IoT</h1>
 
-<button id="add-device" disabled>Add</button>
+<button id="add-device" disabled>On</button>
+
+<div id="pixel-container"></div>
