Add device control from the control page

--- a/app/views/control/index.html.erb
+++ b/app/views/control/index.html.erb
@@ -1,5 +1,5 @@
 <h1>IoT</h1>
 
-<button id="add-device" disabled>On</button>
+<button id="pixel-controller" disabled>On</button>
 
 <div id="pixel-container"></div>
